# sk-law-search

./: README.md
data/: ZZ_2001_311.docx  ZZ_2003_595.docx
python/: main.py  pyproject.toml  text.txt
python/functions/: prepare_data.py
